MRV-1 [ADD] Create Goal Model

--- a/templates/home.html.j2
+++ b/templates/home.html.j2
@@ -68,7 +68,7 @@
 
                 <div class="container p-3">
                     <hr>
-                    {% if yearly_goal %}
+                    {% if goal_amount %}
                     {% if status == 'on track' %}
                     <h5>You are on track to meet your goal. Keep it up!</h5>
                     {% elif status == 'achieved' %}
